--- a/src/App.css
+++ b/src/App.css
@@ -755,7 +755,7 @@ section {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.353), 0 1px 3px rgba(0, 0, 0, 0.375);
 }
 .course-card img {
-  height: 100%px;
+  height: 100%;
   width: 95%;
 }
 .course-card h3 {
